--- a/style.css
+++ b/style.css
@@ -698,7 +698,9 @@ body._lock{
     width: 1280px;
     height: 100px;
     transform: none;
-    background-color: none;
+    background-color:#2F3132;
+
+    ;
     transition: none;
     overflow: visible;
   }
@@ -1012,26 +1014,14 @@ body._lock{
     width: 1920px;
   }
 
+  .header{
+    display: flex;
+    justify-content: center;
+  }
+
   .logo-white{
     width: 150px;
     margin: 0;
-  }
-
-  .menu__list{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    position: static;
-    width: 1280px;
-    height: 100px;
-    transform: none;
-    background-color: none;
-    transition: none;
-    overflow: visible;
-  }
-
-  .menu__list-items{
-    display: none;
   }
 
   .menu__list-large{
@@ -1066,271 +1056,126 @@ body._lock{
     border-bottom: 1px solid #FFFFFF;
   }
 
-  .title{
-    font-size: 36px;
-    line-height: 42px;
-  }
-
-  .text{
-    font-size: 20px;
-    line-height: 23px;
-  }
-
   .first-page__body{
-    background-image: url(img/screen1280/MX-Master\ 1.png);
-    background-repeat: no-repeat;
+    background: url(img/screen1280/MX-Master\ 1.png) no-repeat center top;
   }
-  
-  .first-page__title{
-    padding: 70px 392px 557px 393px;
-  }
-
-  .first-page__text{
-    margin: 0 297px 0px 298px;
-  }
-  
+    
   .arrow-link{
-    margin: 49px 611px 56px 612px;
+    margin: 49px 931px 80px 932px;
   }
-
-  .logo-black{
-    display: none;
-  } 
-
-  .menu__burger span,
-  .menu__burger::before,
-  .menu__burger::after {
-    display: none;
-}
 
 /* second-page */
 
 .second-page{
-  height: 758px;
+  height: 809px;
 }
 
 .bluetooth-icon{
-  width: 21.43px;
-  height: 39.95px;
-  margin: 44.5px 629.57px 40px 629px;
+  margin: 79.9px 952.5px 35.15px 946px;
 }
 
 .second-page__text{
-  margin: 35px 259px 14px 260px;
+  margin: 35px 579px 14px 580px;
 }
 
 .box-mouse{
   background-image: url(img/screen1280/left.png), url(img/screen1280/right.png);
   background-repeat: no-repeat;
-  background-position: left bottom, right bottom;
-}
-
-.text-large{
-  font-size: 300px;
-  line-height: 352px;
-  text-align: center;
-  padding: 0 302px 70px 376px;;
-}
-
-.text-large span{
-  position: relative;
-  bottom: 145px;
-  font-size: 96px;
-  line-height: 112px;
+  background-position: 23% 100%, 73% 100%;
 }
 
 /* three-page */
 
 .three-page__title{
-  margin: 70px 458px 35px 459px;
+  margin: 100px 778px 35px 779px;
 }
 
 .three-page__text{
-  margin: 0 257px 50px 258px;
+  margin: 0 577px 50px 578px;
 }
 
-.three-page__grid{
- display: flex;
- justify-content: center;
- margin-bottom: 50px;
-}
 
 .grid__row:first-child{
-  margin-right: 31.5px;
+  margin-right: 30px;
 }
 
 .grid__row{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  width: 236.4px;
-  height: 140px;
-  border: 1px solid #000000;
-}
-.grid__row-title{
-  font-size: 36px;
-  line-height: 42px;
+  width: 237px;
 }
 
 .slider-wrapper{
-  width: 1280px;
-  height: 573px;
-  overflow: hidden;
-}
-
-.slider-line{
-  width: 1500px;
-  display: flex;
-  position: relative;
-  left: 0;
-  transition: all ease 1s;
-}
-
-.slider-line img{
-  width: 1280px;
+  margin: 0 320px;
 }
 
 .slider__title{
-  margin: 39px 318px 15px 319px;
-  font-size: 20px;
-  line-height: 23px;
+  margin: 39px 639px 15px 638px;
 }
 
 .slider__text{
-  margin: 0 257px 70px 258px;
+  margin: 0 578px 70px 577px;
 }
 
 .slider-nav{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 404px;
-  height: 40px;
-  margin: 0 438px 35px;
+  margin: 0 758px 35px;
 }
 
 /* four-page */
 
 .four-page__title{
-  padding: 70px 244px 35px;
+  padding: 100px 564px 35px;
 }
 
 .four-page__text{
-  margin: 0 160px 66px 162px;
+  margin: 0 478px 64px 484px;
 }
 
 .four-page__box{
-  background-image: url(img/screen1280/High_Resolution_JPG-MX\ Lifestyle\ 2346\ 1.png);
-  background-repeat: no-repeat;
-  background-position: bottom;
-  height: 700px;
+  background: url(img/screen1920/High_Resolution_JPG-MX\ Lifestyle\ 2346\ 1.png) no-repeat bottom;
+  height: 930px;
 }
 
 .box__list{
-  display: grid;
-  grid-template-columns: 327px 415px 201px;
-  list-style-type: none;
-  padding: 0 168px 0 169px ;
-}
-
-.box__list li{
-  font-size: 20px;
-  line-height: 23px;
-  text-align: left;
-  padding-left: 60px;
-  border-right: 1px solid #494949;
-}
-.box__list li:first-child{
-  padding-left: 0;
-}
-
-.box__list li:last-child{
-  border-right: none;
+  padding: 0 478px 0 499px ;
 }
 
 /* five-page */
 
 .five-page__title{
-  margin: 70px 290x 38px;
+  margin: 100px 610px 38px;
 }
 
 .five-page__text{
-  margin: 0 161px 54px;
-}
-
-.five-page__slider{
-  display: none;
-}
-
-.five-page__specifications{
-  background-image: url(img/screen1280/specifications.png);
-  background-repeat: no-repeat;
-  background-position: top;
-  height: 698px;
+  margin: 0 482px 72px 480px;
 }
 
 .five-page__box{
-  margin: 0 243px 71px 288px;
-}
-
-.icon-apps{
-  display: flex;
-  justify-content: space-around;
-  padding: 38px 117px 25px 120px;
-}
-
-.box__text{
-  padding: 0;
+  margin: 0 587px 100px 584px;
 }
 
 /* six-page */
 
-.six-page__wrapper{
-  display: flex;
-}
-
-.one-box{
-  display: flex;
-  flex-direction: row-reverse;
+.six-page{
+  padding: 100px 307px 100px 304px;
 }
 
 .six-page__title{
   text-align: left;
-  margin: 70px 72px 30px 36px;
+  margin: 121px 336px 28px 37px;
  }
  
  .six-page__text{
    text-align: left;
-   margin: 0 65px 50px 36px;
+   margin: 0 217px 121px 37px;
  }
 
  .six-page__title-two{
   text-align: right;
-  margin: 162px 32px 34px 291px;
+  margin: 162px 31px 34px 307px;
  }
  
  .six-page__text-two{
    text-align: right;
-   margin: 0 32px 162px 208px;
+   margin: 0 31px 162px 224px;
  }
 
- .six-page__img{
-   display: none;
- }
- .six-page__img-two{
-   display: block;
- }
- /* footer  */
- .footer{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
- }
- .footer__text{
-   padding: 0;
-   width: 170px;
-   font-size: 14px;
-   line-height: 16px;
- }
-}
 }
